# anosium-be-up

./: .env  API_EXAMPLES.md  DEPLOYMENT.md  PROJECT_SUMMARY.md  README.md  SRS.md  auto_fix_init.py  comprehensive_fix.sql  detect_schemas.py  diagnose_pydantic.py  fix_repositories.py  main.py  missing.md  preview.sql  pyproject.toml  quick_fix.sh  quick_fix.sql  requirements.txt  schemas_init_auto.py  seed.py
alembic/: env.py
api/: __init__.py  auth.py  deps.py  deps_audit.py
core/: config.py  database.py  email.py  limiter.py  logging.py  pdf_renderer.py  security.py
middlewares/: tenant_middleware.py
models/: ai_interaction.py  ai_lead.py  analytics.py  appointment.py  audit.py  automation_rule.py  backup.py  base.py  billing.py  clinic.py  compliance.py  department.py  doctor.py  integration.py  invoice.py  lead.py  notification.py  patient.py  security.py  service.py  tenant.py  user.py  visit.py
repositories/: __init__.py  ai_lead.py  analytics.py  appointment.py  audit.py  base.py  billing.py  department.py  doctor.py  notification.py  patient.py  service.py  tenant.py  user.py  visit.py
routes/: ai.py  auth.py  billing.py  clinic.py
schemas/: __init__.py  ai_lead.py  analytics.py  appointment.py  audit.py  auth.py  billing.py  clinic.py  common.py  department.py  doctor.py  invoice.py  notification.py  patient.py  service.py  tenant.py  user.py  visit.py
services/: __init__.py  ai_lead_service.py  ai_service.py  analytics_service.py  appointment_service.py  auth_service.py  base_service.py  billing.py  department_service.py  doctor_service.py  (+7 more)
(+28 files in other folders)
